# job-pulse

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_models.py
backend/app/: main.py
backend/app/api/v1/: api.py  companies.py  health.py  jobs.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  company.py  job.py
backend/app/repositories/: __init__.py  base.py  company.py  job.py
backend/app/schemas/: __init__.py  company.py  job.py
backend/app/scrapers/: __init__.py  base.py  getonboard.py  schemas.py  service.py
backend/tests/: conftest.py  test_database.py  test_health.py  test_jobs.py  test_repositories.py  test_scrapers.py
frontend/: README.md
scraper/: README.md  pyproject.toml
